{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 13,
  "lineage": "c3722580-2fab-b78d-b665-082315deac34",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:004276707835:vpc/vpc-0e4d9c7aefee4a59a",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-02c06c860b4e7724d",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0e054b34e04d0fb89",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e4d9c7aefee4a59a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00018a4bc57fe55e6",
            "owner_id": "004276707835",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:004276707835:loadbalancer/app/app-alb/362ed85374cf423e",
            "arn_suffix": "app/app-alb/362ed85374cf423e",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-alb-1522950968.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:004276707835:loadbalancer/app/app-alb/362ed85374cf423e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0d91d53a67e73810c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02f7297075b7540f2"
              },
              {
                "subnet_id": "subnet-03d4acd413ef133b5"
              },
              {
                "subnet_id": "subnet-057946b4f7c9e2b8d"
              },
              {
                "subnet_id": "subnet-06f968919f7d71ae9"
              },
              {
                "subnet_id": "subnet-086922b1e5177f52b"
              },
              {
                "subnet_id": "subnet-0abc8e7006cc1c003"
              }
            ],
            "subnets": [
              "subnet-02f7297075b7540f2",
              "subnet-03d4acd413ef133b5",
              "subnet-057946b4f7c9e2b8d",
              "subnet-06f968919f7d71ae9",
              "subnet-086922b1e5177f52b",
              "subnet-0abc8e7006cc1c003"
            ],
            "tags": {
              "Environment": "test",
              "Name": "app-alb",
              "Owner": "cldiazl@uce.edu.ec"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "app-alb",
              "Owner": "cldiazl@uce.edu.ec"
            },
            "vpc_id": "vpc-0e4d9c7aefee4a59a",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:004276707835:loadbalancer/app/app-alb/362ed85374cf423e"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:004276707835:listener/app/app-alb/362ed85374cf423e/92da0926e0d7ecee",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:004276707835:targetgroup/app-tg/90b711db937de91b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:004276707835:listener/app/app-alb/362ed85374cf423e/92da0926e0d7ecee",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:004276707835:loadbalancer/app/app-alb/362ed85374cf423e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:004276707835:listener/app/app-alb/362ed85374cf423e/92da0926e0d7ecee"
          },
          "dependencies": [
            "aws_lb.app_alb",
            "aws_lb_target_group.app_tg",
            "aws_security_group.alb_sg",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:004276707835:targetgroup/app-tg/90b711db937de91b",
            "arn_suffix": "targetgroup/app-tg/90b711db937de91b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:004276707835:targetgroup/app-tg/90b711db937de91b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:004276707835:loadbalancer/app/app-alb/362ed85374cf423e"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "test",
              "Name": "app-tg",
              "Owner": "cldiazl@uce.edu.ec"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "app-tg",
              "Owner": "cldiazl@uce.edu.ec"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0e4d9c7aefee4a59a"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:004276707835:targetgroup/app-tg/90b711db937de91b"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:004276707835:security-group/sg-0d91d53a67e73810c",
            "description": "Permite HTTP desde Internet hacia el ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d91d53a67e73810c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "004276707835",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "test",
              "Name": "alb-sg",
              "Owner": "cldiazl@uce.edu.ec",
              "Project": "UCE"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "alb-sg",
              "Owner": "cldiazl@uce.edu.ec",
              "Project": "UCE"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4d9c7aefee4a59a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "004276707835",
            "id": "sg-0d91d53a67e73810c",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:004276707835:security-group/sg-0e712a77c329304db",
            "description": "Permite HTTP desde el ALB y SSH para administracin",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e712a77c329304db",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d91d53a67e73810c"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app-server-sg",
            "name_prefix": "",
            "owner_id": "004276707835",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "test",
              "Name": "app-server-sg",
              "Owner": "cldiazl@uce.edu.ec",
              "Project": "UCE"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "app-server-sg",
              "Owner": "cldiazl@uce.edu.ec",
              "Project": "UCE"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e4d9c7aefee4a59a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "004276707835",
            "id": "sg-0e712a77c329304db",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}